# proxy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  meson.build  meson.format  meson.options  mkdocs.yml  proxy.h  proxy_fmt.h
benchmarks/: CMakeLists.txt  meson.build  proxy_creation_benchmark.cpp  proxy_invocation_benchmark.cpp  proxy_invocation_benchmark_context.cpp  proxy_invocation_benchmark_context.h  proxy_management_benchmark.cpp  proxy_operation_benchmark.cpp  proxy_operation_benchmark_context.cpp  proxy_operation_benchmark_context.h  proxy_small_object_invocation_benchmark.cpp  proxy_small_object_invocation_benchmark_context.cpp  proxy_small_object_invocation_benchmark_context.h
docs/: .pages  CMakeLists.txt  PRO_DEF_FREE_AS_MEM_DISPATCH.md  PRO_DEF_FREE_DISPATCH.md  PRO_DEF_MEM_DISPATCH.md  PRO_DEF_REFL_ACCESSOR.md  PRO_DEF_REFL_AS_MEM_ACCESSOR.md  PRO_DEF_WEAK_DISPATCH.md  ProAccessible.md  ProBasicReflection.md  ProOverload.md  ProReflection.md  access_proxy.md  allocate_proxy.md  allocate_proxy_shared.md  bad_proxy_cast.md  basic_facade_builder.md  constraint_level.md  conversion_dispatch.md  cpp20_modules_support.cmake.in  cpp20_modules_support.md  example.cpp.in  explicit_conversion_dispatch.md  facade_aware_overload_t.md  faq.md  formatter_proxy_indirect_accessor.md  implicit_conversion_dispatch.md  inplace_proxiable_target.md  make_proxy.md  make_proxy_inplace.md  make_proxy_shared.md  make_proxy_view.md  meson.build  modules_support.md  msft_lib_proxy.md  not_implemented.md  observer_facade.md  operator_dispatch.md  proxiable.md  proxiable_target.md  (+8 more)
docs/basic_facade_builder/: add_convention.md  add_facade.md  add_reflection.md  add_view.md  build.md  restrict_layout.md  support_format.md  support_rtti.md  support_view.md  support_weak.md
docs/basic_facade_builder/support_rtti/: proxy_cast.md  proxy_typeid.md
docs/conversion_dispatch/: accessor.md  operator_call.md
docs/en-us/: __msft_lib_proxy.md  facade.md  faq.md  inplace_proxiable_target.md  make_proxy_inplace.md  operator_dispatch.md  proxiable_ptr_constraints.md
docs/en-us/basic_facade_builder/: add_facade.md  add_reflection.md  build.md  support_copy.md  support_destruction.md  support_relocation.md
docs/en-us/conversion_dispatch/: accessor.md
docs/en-us/proxy/: assignment.md
docs/explicit_conversion_dispatch/: accessor.md  operator_call.md
docs/formatter_proxy_indirect_accessor/: format.md  parse.md
docs/implicit_conversion_dispatch/: accessor.md  operator_call.md
docs/operator_dispatch/: accessor.md  operator_call.md
docs/proxy/: constructor.md  destructor.md  emplace.md  friend_operator_equality.md  friend_swap.md  indirection.md  operator_bool.md  reset.md  swap.md
docs/resources/: extra.css
docs/spec/: .pages  PRO_DEF_FREE_AS_MEM_DISPATCH.md  PRO_DEF_FREE_DISPATCH.md  PRO_DEF_MEM_DISPATCH.md  ProAccessible.md  ProBasicConvention.md  ProBasicFacade.md  ProBasicReflection.md  ProConvention.md  ProDispatch.md  ProFacade.md  ProOverload.md  ProReflection.md  README.md  access_proxy.md  allocate_proxy.md  allocate_proxy_shared.md  bad_proxy_cast.md  constraint_level.md  facade.md  facade_aware_overload_t.md  inplace_proxiable_target.md  is_bitwise_trivially_relocatable.md  make_proxy.md  make_proxy_inplace.md  make_proxy_shared.md  make_proxy_view.md  msft_lib_proxy.md  not_implemented.md  proxiable.md  proxiable_ptr_constraints.md  proxiable_target.md  proxy_indirect_accessor.md  proxy_invoke.md  proxy_reflect.md  proxy_view.md  skills_as_view.md  skills_as_weak.md  skills_fmt_format.md  skills_format.md  (+2 more)
docs/spec/basic_facade_builder/: .pages  README.md  add_convention.md  add_facade.md  add_reflection.md  add_skill.md  build.md  restrict_layout.md  support.md  support_copy.md  support_destruction.md  support_relocation.md
docs/spec/explicit_conversion_dispatch/: .pages  README.md  accessor.md
docs/spec/implicit_conversion_dispatch/: .pages  README.md  accessor.md  operator_call.md
docs/spec/operator_dispatch/: .pages  README.md  accessor.md
docs/spec/proxy/: .pages  README.md  assignment.md  constructor.md  destructor.md  emplace.md  friend_operator_equality.md  friend_swap.md  indirection.md  (+3 more)
docs/weak_dispatch/: operator_call.md
samples/: CMakeLists.txt  PRO_DEF_FREE_AS_MEM_DISPATCH.cpp  PRO_DEF_FREE_DISPATCH.cpp  PRO_DEF_MEM_DISPATCH.cpp  PRO_DEF_REFL_ACCESSOR.cpp  PRO_DEF_REFL_AS_MEM_ACCESSOR.cpp  PRO_DEF_WEAK_DISPATCH.cpp  __msft_lib_proxy.cpp  access_proxy.cpp  allocate_proxy.cpp  allocate_proxy_shared.cpp  basic_facade_builder.cpp  conversion_dispatch.cpp  explicit_conversion_dispatch.cpp  facade_aware_overload_t.cpp  implicit_conversion_dispatch.cpp  inplace_proxiable_target.cpp  make_proxy.cpp  make_proxy_inplace.cpp  make_proxy_shared.cpp  make_proxy_view.cpp  msft_lib_proxy.cpp  observer_facade.cpp  operator_dispatch.cpp  proxiable.cpp  proxiable_target.cpp  proxy.cpp  proxy_invoke.cpp  proxy_reflect.cpp  proxy_view.cpp  vcpkg.json  weak_dispatch.cpp  weak_proxy.cpp
samples/basic_facade_builder/: add_convention.cpp  add_facade.cpp  add_reflection.cpp  add_view.cpp  build.cpp  restrict_layout.cpp  support_copy.cpp  support_destruction.cpp  support_format.cpp  support_relocation.cpp  support_rtti.cpp  support_view.cpp  support_weak.cpp
samples/proxy/: constructor.cpp  destructor.cpp  emplace.cpp  friend_operator_equality.cpp  friend_swap.cpp  indirection.cpp  operator_bool.cpp  reset.cpp
samples/resource_dictionary/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  DummyTests.cpp  meson.build  proxy_creation_tests.cpp  proxy_dispatch_tests.cpp  proxy_fmt_format_tests.cpp  proxy_format_tests.cpp  proxy_integration_tests.cpp  proxy_invocation_tests.cpp  proxy_lifetime_tests.cpp  proxy_reflection_tests.cpp  proxy_regression_tests.cpp  proxy_rtti_tests.cpp  proxy_traits_tests.cpp  proxy_view_tests.cpp  utils.h
tests/cpp20_modules/: CMakeLists.txt  foo.cpp  impl.cpp  main.cpp
tests/freestanding/: proxy_freestanding_tests.cpp
tests/modules/: main.cpp  meson.build
tools/report_generator/: CMakeLists.txt  main.cpp  report-config.json
(+69 files in other folders)
